9 May 2019: Wouter
	- Revert fix for oss-fuzz, error is in that build script that
	  unconditionally includes .o files detected by configure, also
	  when the machine architecture uses different LIBOBJS files.

8 May 2019: Wouter
	- Attempt to fix build failure in oss-fuzz because of reallocarray.
	  https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=14648.
	  Does not omit compile flags from commandline.

7 May 2019: Wouter
	- Fix edns-subnet locks, in error cases the lock was not unlocked.
	- Fix doxygen output error on readme markdown vignettes.

6 May 2019: Wouter
	- Fix #29: Solaris 11.3 and missing symbols be64toh, htobe64.
	- Fix #30: AddressSanitizer finding in lookup3.c.  This sets the
	  hash function to use a slower but better auditable code that does
	  not read beyond array boundaries.  This makes code better security
	  checkable, and is better for security.  It is fixed to be slower,
	  but not read outside of the array.

2 May 2019: Wouter
	- contrib/fastrpz.patch updated for code changes, and with git diff.
	- Fix .gitignore, add pythonmod and dnstap generated files.
	  And unit test generated files, and generated doc files.

1 May 2019: Wouter
	- Update makedist for git.
	- Nicer travis output for clang analysis.
	- PR #16: XoT support, AXFR over TLS, turn it on with
	  master: <ip>#<authname> in unbound.conf.  This uses TLS to
	  download the AXFR (or IXFR).

25 April 2019: Wouter
	- Fix wrong query name in local zone redirect answers with a CNAME,
	  the copy of the local alias is in unpacked form.

18 April 2019: Ralph
	- Scrub RRs from answer section when reusing NXDOMAIN message for
	  subdomain answers.
	- For harden-below-nxdomain: do not consider a name to be non-exitent
	  when message contains a CNAME record.

18 April 2019: Wouter
	- travis build file.

16 April 2019: Wouter
	- Better braces in if statement in TCP fastopen code.
	- iana portlist updated.

15 April 2019: Wouter